--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Le Cine</title>
-    
+    <script src="https://cdn.tiny.cloud/1/szdnnii3ejr5bw2k5ccf1ipcdvri341aqmxnaw1ij0o8uuu9/tinymce/5/tinymce.min.js"
+      referrerpolicy="origin"></script>
+    <script>
+      $(document).on('focusin', function (e) {
+          if ($(e.target).closest(".tox-tinymce, .tox-tinymce-aux, .moxman-window, .tam-assetmanager-root, .tox-textfield, .tox-control-wrap, .tox-textarea").length) {
+            e.stopImmediatePropagation();
+          }
+        });
+    </script>
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
